# Simple-API

./: README.md  pyproject.toml
app/: app.py  db.py
