[project]
name = "simple-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "fastapi>=0.127.0",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "imagekitio>=5.0.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
